style.css
* {
	box-sizing: border-box;
}

html,
body {
	overflow-x: hidden;
}

body {
	position: relative;
	height: 100vh;
	margin: 0;
}

.ball {
	position: absolute;
	width: 100px;
	height: 100px;
	border-radius: 50%;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	background-color: midnightblue;
}

.tail-cell {
	animation: fadeTail 1s linear;
	animation-fill-mode: forwards;
}

@keyframes fadeTail {
	100% {
		filter: brightness(2.5) opacity(0);
	}
}

